welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: unclosed comment
 /* var T = new Array [Int](num)
 ^golomb:2: error: unclosed comment
 /* var T = new Array [Int](num)
 ^golomb:2: error: unclosed comment
 /* var T = new Array [Int](num)
 ^golomb:2: error: unclosed comment
 /* var T = new Array [Int](num)
 ^golomb:-6: error: Missing closing brace `}' assumed here
try {
^golomb:1: error: expected class or object definition
def golomb(num:Int): Int = {
^golomb:2: error: unclosed comment
 /* var T = new Array [Int](num)
 ^